# limewire

./: .bazelrc  .gitignore  CMakeLists.txt  README.md  WORKSPACE  build.sh  main.cpp  pyproject.toml  run.sh
.github/: CODEOWNERS
.github/workflows/: ruff.yml
limestone/: tcppacket.cpp  tcppacket.h
main/: BUILD.bazel  limewire.cpp
old/: .bazelrc  .gitignore  WORKSPACE
old/fc-driver/: CMakeLists.txt  README.md  build.sh  fc-driver.cpp
old/fc-driver/synnax/: reader.cpp  reader.h  reader_test.cpp  writer.cpp  writer.h
old/fc-driver/tcp/: tcppacket.cpp  tcppacket.h  tcpreader.cpp  tcpreader.h  tcpwriter.cpp  tcpwriter.h
old/fc-driver/tests/: driver-test.cpp
old/gse-driver/: .uuid  BUILD.bazel  DESIGN.md  helpers.h  main.cpp  reader.cpp  reader.h  reader_test.cpp  writer.cpp  writer.h  writer_test.cpp
old/gse-driver/calibration/: .calibration.h.swo  .calibration.h.swp  .uuid  BUILD.bazel  calibration.h  tc.cpp
old/gse-driver/calibration/tests/: BUILD.bazel  test_pt.cpp  test_tc.cpp
old/gse-driver/certs/: .uuid
old/gse-driver/comedi/: .uuid  Makefile  analog.cpp  analog.h  comedilib.h  digital.cpp  digital.hpp  tsqueue.hpp
old/gse-driver/comedi/boost/: Makefile
old/gse-driver/comedi/demo/: Makefile  analog_demo.c  common.c  digital_demo.cpp  examples.h  test.c  test.cpp
old/gse-driver/daq/: .uuid  BUILD.bazel  Makefile  analog_read_tests.cpp  comedi_device  comedi_device.cpp  comedi_device.h  comedilib.h  daq_mappings.h  main  main.cpp  matrix.h  mock.h  reader.cpp  reader.h  usbreset  usbreset.c  writer  writer.cpp  writer.h
old/gse-driver/daq/tests/: matrix_test.cpp
src/fc_simulator/: __init__.py  __main__.py  errors.py  fc_simulator.py  logger.py
src/hydrant/: __init__.py  __main__.py  device_command_history.py  eeprom_generate.py  hydrant.py  hydrant_error_ui.py  hydrant_system_config.py  hydrant_telemetry.py  hydrant_ui.py  logging.py  map_ui.py  ntp_broadcast.py
src/limewire/: __init__.py  __main__.py  errors.py  limewire.py  limewire_old.py  logger.py  logging.py  ntp_sync.py  synnax_util.py  util.py
src/limewire/data/: channels.json  channels.txt
src/limewire/messages/: __init__.py  command.py  heartbeat.py  telemetry.py  test_messages.py  util.py  valve.py
src/lmp/: __init__.py  device_command.py  firmware_log.py  framer.py  handoff.py  heartbeat.py  log.py  telemetry.py  util.py
src/log_parser/: __init__.py  parser.py
src/messages/: __init__.py  test_messages.py
src/packets/: __init__.py  packets.py  test_packets.py
src/plot_latency/: __main__.py  logger.py
src/proxy/: __init__.py  logging.py  proxy.py
src/utils/: __init__.py  connection_utils.py  limewire_utils.py  ntp_sync.py  socket_address.py  synnax_framer.py  util.py
synnax/writer/: synnax_writer.cpp
