[tool.poetry]
name = "limewire"
version = "0.1.0"
description = "A driver to facilitate communication between Synnax and Limelight"
authors = ["Rohan Satapathy <61920401+rohansatapathy@users.noreply.github.com>"]
readme = "README.md"
packages = [ 
    { include = "limewire", from = "src" },
    { include = "packets", from = "src" }, 
]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
synnax = ">=0.34.0"

[tool.poetry.scripts]
limewire = "limewire.__main__:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I001"]
ignore-init-module-imports = true
