[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [
    {name = "Rohan Satapathy", email = "61920401+rohansatapathy@users.noreply.github.com"},
]
requires-python = "<=3.13,>=3.12"
dependencies = [
    "click>=8.1.8",
    "loguru>=0.7.3",
    "nicegui>=2.23.2",
    "platformdirs>=4.5.0",
    "python-dotenv<2.0.0,>=1.0.1",
    "seaborn>=0.13.2",
    "synnax>=0.46,<0.47",
]
name = "limewire"
version = "0.1.0"
description = "A driver to facilitate communication between Synnax and Limelight"
readme = "README.md"

[project.scripts]
limewire = "limewire.__main__:main"
fc_simulator = "fc_simulator:main"
hydrant = "hydrant:main"

[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.3.4",
]

[tool.pdm.build]
includes = [
    "src/limewire",
    "src/hydrant"
    "src/lmp"
]


[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I001"]
ignore-init-module-imports = true
ignore = ["E741"]
