cc_library(
    name = "reader",
    srcs = ["reader.cpp"],
    hdrs = ["reader.h"],
    deps = [
        "//gse-driver/calibration",
        "//gse-driver/daq:reader",
        "//gse-driver/daq:writer",
        "@synnax//synnax",
    ],
)

cc_library(
    name = "writer",
    srcs = ["writer.cpp"],
    hdrs = ["writer.h"],
    deps = [
        "//gse-driver/calibration",
        "//gse-driver/daq:reader",
        "//gse-driver/daq:writer",
        "@synnax//synnax",
    ],
)

cc_test(
    name = "reader_test",
    srcs = ["reader_test.cpp"],
    deps = [
        "reader",
        "//gse-driver/daq:mock",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "writer_test",
    srcs = ["writer_test.cpp"],
    copts = ["-g"],  # Include debugging information
    deps = [
        "writer",
        "//gse-driver/daq:mock",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_binary(
    name = "driver",
    srcs = ["main.cpp"],
    copts = ["-g"],  # Include debugging information
    deps = [
        "reader",
        "writer",
        "//gse-driver/daq:mock",
    ],
)
