cc_library(
    name = "daq_mappings",
    hdrs = [
        "daq_mappings.h"
    ]
)

cc_library(
    name = "matrix",
    hdrs = [
        "matrix.h"
    ],
)

cc_library(
    name = "comedi",
    srcs = [
        "comedi_device.cpp"
    ],
    hdrs = [
        "comedi_device.h",
        "comedilib.h"
    ],
    linkopts = ["-lm", "-lcomedi"],
    visibility = ["//visibility:public"]
)

cc_library(
    name = "writer",
    hdrs = ["writer.h"],
    srcs = ["writer.cpp"],
    deps = ["comedi", "daq_mappings"],
    visibility = ["//visibility:public"]
)

cc_library(
    name = "reader",
    hdrs = ["reader.h"],
    srcs = ["reader.cpp"],
    deps = ["comedi", "daq_mappings", "matrix"],
    visibility = ["//visibility:public"]
)

cc_library(
    name = "mock",
    hdrs = [
        "mock.h",
    ],
    deps = [
        ":matrix",
        ":reader",
        ":writer"

    ],
    visibility = ["//visibility:public"]
)

cc_test(
    name = "matrix_test",
    srcs = ["matrix_test.cpp"],
    deps = [":matrix", "@com_google_googletest//:gtest_main"]
)
